https://github.com/islammelisov22/my_site.git

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
                     <a href="#" class="btn btn-primary">Перейти к блюду</a>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">коспания: {{ dish.company }}</li>
+                    <li class="list-group-item">компания: {{ dish.company }}</li>
                     <li class="list-group-item">цена: {{ dish.price }}</li>
                     <li class="list-group-item">категории: {{ dish.get_categories }}</li>
                 </ul>
