--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: url("/static/img/table.jpg") no-repeat fixed;
+    background: url("/static/img/img.jpg") no-repeat fixed;
     background-size: cover;
     transition: 3s;
 }
