--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,20 +1,23 @@
 body{
-background-image:url(https://i.ytimg.com/vi/tE86VlLbqiQ/maxresdefault.jpg);
+     background:black;
 }
-
+body ,form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 section {
-    background: black;
+    background: orange;
     width: 400px;
     padding: 40px;
-    border-radius: 10%;
+    border-radius: 5%;
 
-}
-
-label, input {
-    display: block;
 }
 
 button {
-    background: greenyellow;
+    background: black;
+    color:white;
     border-radius: 50%;
 }
+
